# ATMSimulator

./: .gitignore  README.md  readme.md
VirtualATM/: ATM_Simulator  CMakeLists.txt  build.bat  build.sh  debug_build.sh
VirtualATM/backup/: ATM.cpp  ATM.h  Account.cpp  Account.h  FileManager.cpp  FileManager.h  Transaction.cpp  Transaction.h  main.cpp
VirtualATM/data/: accounts.txt
VirtualATM/src/: ATM.cpp
